# B734-Clipboard-Plugin

./: CMakeLists.txt  Custom-Command-with-Custom-DataRef.cpp  Custom-Command-with-Custom-DataRef.sln  Custom-Command-with-Custom-DataRef.vcxproj  cpp.hint
.github/workflows/: build.yml
Debug/64/: Custom-Command-with-Custom-DataRef.exp  win.xpl.recipe
Debug/64/Custom-C.AEF81E13.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Custom-Command-with-Custom-DataRef.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Debug/plugins/Custom-Command-with-Custom-DataRef/64/: win.xpl
Release/64/: Custom-Command-with-Custom-DataRef.exp  Custom-Command-with-Custom-DataRef.lib  win.xpl.recipe
Release/64/Custom-C.AEF81E13.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Custom-Command-with-Custom-DataRef.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Release/plugins/Custom-Command-with-Custom-DataRef/64/: win.xpl
SDK/CHeaders/XPLM/: XPLMDataAccess.h
